--- a/explosion.html
+++ b/explosion.html
@@ -9,6 +9,7 @@
     <!--puxando os links para mexer no código-->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <link rel="stylesheet" href="explosion.css" />
+    <script src="explosion.js"></script>
     <title>página isa e clara</title>
   </head>
   <body>
